[gd_scene load_steps=2 format=3 uid="uid://cxfkvrcrnjyqj"]

[ext_resource type="Script" path="res://scripts/ui/prize_list_item.gd" id="1_hd3rj"]

[node name="PrizeListItem" type="PanelContainer"]
script = ExtResource("1_hd3rj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PrizeInfo" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrizeName" type="Label" parent="MarginContainer/HBoxContainer/PrizeInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "奖项名称"

[node name="ProgressLabel" type="Label" parent="MarginContainer/HBoxContainer/PrizeInfo"]
layout_mode = 2
text = "0/1"
horizontal_alignment = 1

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "删除"

[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
